--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,12 @@ sass:
   style:            :compressed
 
 collections:
-  notes:
-    output: true
-    permalink: /:path/:slug
+  - notes:
+      output: true
+      permalink: /:path/:slug
 
+exclude:
+    - getfeeds.rb
 
 defaults:
   - scope:
@@ -45,8 +47,14 @@ defaults:
       path: "_notes/**/*.md"
     values:
       layout: "note"
-  - scope:
-      path: "_butts/**/*.md"
-    values:
-      layout: "note"
-      butttype: "cool"
+
+  feeds:
+    - name: Nim Ha
+      feed: https://feeds.pinboard.in/rss/secret:b033bb0b394dfb0e3cb3/u:nimdaghlian/t:ha/
+      bucket: bookmarks
+    - name: Nim Covid
+      feed: https://feeds.pinboard.in/rss/secret:b033bb0b394dfb0e3cb3/u:nimdaghlian/t:covid/
+      bucket: bookmarks
+    - name: APOD
+      feed: https://apod.nasa.gov/apod.rss
+      bucket: feeds
