--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
-title:               My digital garden
+title:               New and Improved Digital Garden
 include:             ['_pages']
-exclude:             ['_includes/notes_graph.json']
+exclude:
+  - getfeeds.rb
+  - util
+  - _includes/notes_graph.json
+
 # You may need to change the base URL depending on your deploy configuration.
 # Specifically, when using GitHub Pages, the baseurl should point to where GitHub
 # Pages deploys your repository (which is usually the repository name).
@@ -36,9 +40,7 @@ collections:
     output: true
     permalink: /:path/:slug
 
-exclude:
-  - getfeeds.rb
-  - util
+
 
 defaults:
   -
