--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,9 @@ feeds:
   - name: "digitalgardens pinboard"
     feed: https://feeds.pinboard.in/rss/secret:b033bb0b394dfb0e3cb3/u:nimdaghlian/t:digitalgardens/
     bucket: "Bookmarks"
+  - name: "cozyweb pinboard"
+    feed: https://feeds.pinboard.in/rss/secret:b033bb0b394dfb0e3cb3/u:nimdaghlian/t:cozyweb/
+    bucket: "Bookmarks"
   - name: "The Grapefruit Sometimes Art Email"
     tags: ["art", "cool", "Grapefruits Sometimes Art Email"]
     feed: https://buttondown.email/martha/rss
